fix: remove overflow overlay

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -140,14 +140,13 @@ a {
   max-height: 250px;
   object-fit: cover;
   margin-bottom: -2rem;
-  overflow: hidden;
 }
 
 .cards {
   display: flex;
   flex-flow: column nowrap;
+  position: relative;
   background-color: #f6f6f6;
-  overflow: overlay;
   border-radius: 2rem 2rem 0 0;
   padding: 0 0.75rem;
 }
