--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -3,14 +3,13 @@
     max-height: 250px;
     object-fit: cover;
     margin-bottom: -2rem;
-    overflow: hidden;
 }
 
 .cards {
     display: flex;
     flex-flow: column nowrap;
+    position: relative;
     background-color: $color-bg-cards;
-    overflow: overlay;
     border-radius: 2rem 2rem 0 0;
     padding: 0 0.75rem;
     &__heading {
